--- a/src/Pages/DailyDelivery/DailyDelivery.module.css
+++ b/src/Pages/DailyDelivery/DailyDelivery.module.css
@@ -150,13 +150,24 @@
     margin-bottom: 1rem;
 }
 .date__control{
-   align-items: center;
+   /* align-items: center;
   justify-content: center;
    padding: 0.8rem;
   border-radius: 0.8rem;
   border: 0.1rem solid white;
-  /* width: 15rem; */
+  background-color: white; */
+
   background-color: white;
+  border:1px solid #00000033;
+  width: 15rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap:0.5rem;
+  border-radius: 8px;
+  transition: background-color 250ms ease-in-out;
+  cursor: pointer;
+  padding: 1rem;
 }
 
 .date__control:hover{
