--- a/src/Components/datePicker/CustomDatePicker.css
+++ b/src/Components/datePicker/CustomDatePicker.css
@@ -1,16 +1,16 @@
 
 
 .p-calendar {
-  width: 100%;
-  height: 3.8rem;
-  max-width: 50rem;
+  width: 490px;
+  /* height: 3.8rem;
+  max-width: 50rem; */
 }
 
 .p-datepicker {
   border-radius: 12px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
   border: 1px solid #ccc;
-  padding: 1rem;
+  padding: 0.5rem;
   margin-top: 3px;
   
 }
@@ -79,9 +79,9 @@
 
 .p-calendar .p-inputtext {
   /* Input field styles */
-  width: 100%;
+  /* width: 100%; */
   padding: 0.5rem 1rem;
-  height: 38px;
+  /* height: 38px; */
   font-size: 14px;
   border: 1px solid #ccc;
   border-radius: 8px 0 0 8px; /* Only round left corners */
@@ -104,7 +104,7 @@
   color: white;
   border: none;
   border-radius: 0 8px 8px 0;
-  padding: 0.5rem;
+  padding: 1.5rem;
   width: 5rem;
   transition: background-color 250ms ease-in-out;
 }
