--- a/src/Pages/COD/Cod.module.css
+++ b/src/Pages/COD/Cod.module.css
@@ -10,64 +10,50 @@
     margin-left: 0.9rem;
     margin-bottom: 1rem;
 }
-.Outercontainer{
-     background-color:var(--clr-white); 
-     padding: 1.5rem;
-    width: 95%;
-    height: 280px;
-    border-radius: 8px;
-     overflow: hidden;
-     margin-top: 0.8rem;
-     display: flex;
-     gap: 4px;
-}
 .Outercontainertwo{
- background-color:var(--clr-white); 
-     padding: 0.8rem;
-    width: 100%;
-    height: 100px;
-    border-radius: 8px;
-    
+ /* background-color:var(--clr-white);  */
+ /* width: 148rem; */
+ background-color:none;
+     padding: 1.5rem;
+    /* border-radius: 8px; */
      margin-top: 1.5rem;
      display: flex;
-     justify-content: space-around;
+     gap: 1.5rem;
+     /* justify-content: space-between; */
 }
 
  .detailstitle{
     
     font-weight: 600;
     font-size: 1.8rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.8rem;
   }
-
-  .Outercontainer textarea {
-  width: 600px;
-  height: 100%;
-  background-color: white;
-  padding: 1rem;
-  border-radius: 0.8rem;
-  border: 1px solid #ccc;
-  resize: none;
-  font-family: inherit;
-}
+   .detailstitleR{
+    
+    font-weight: 600;
+    font-size: 1.4rem;
+    margin-bottom: 0.6rem;
+  }
 
  .OutercontainerRight{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     gap: 2rem;
+    /* width: 148rem; */
+    background-color: none;
+    padding:1rem;
 
  }
 
   .OutercontainerRight label{
      display: inline-block;
-     text-align: left;
+     /* text-align: left; */
     font-weight: 600;
     font-size: 1.3rem;
   }
 
 
-
+/* 
   .btncontainer {
   display: flex;
   justify-content: flex-end;
@@ -114,7 +100,7 @@
 .verticalButton:hover{
    background-color: #054231;
   border-color: var(--main-theme);
-}
+} */
 
 
 .tableContainer {
@@ -258,19 +244,20 @@
 .remarks label{
  /* display: inline-block; */
      /* text-align: left; */
-    font-weight: 500;
-    font-size: 1.6rem;
+    font-weight: 600;
+    font-size: 1.4rem;
 }
 
 
 .filed1{
   display: flex;
-  justify-content: space-between;
-  grid-template-columns: 1fr 1fr 0.1fr;
+  /* justify-content: space-between; */
+  /* grid-template-columns: 1fr 1fr 0.1fr; */
   gap:2rem;
   background-color: white;
-  padding:1rem 0rem 1rem 1rem ;
+  padding:1.5rem ;
   position: relative;
+  border-radius: 8px;
   /* transition: all;
   transition-timing-function: ease-in-out;
   transition-duration: 450ms; */
@@ -282,7 +269,7 @@
 
   display: flex;
   flex-direction: column;
-  width: 72.2rem;
+  /* width: 72.2rem; */
 }
 
 .filed1_in1 textarea{
@@ -309,12 +296,12 @@
 }
 
 .filed1_in2_con1 label{
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   font-weight: 500;
 }
 
 
-.verticalButton{
+/* .verticalButton{
    background-color:var(--main-theme);
   color: var(--clr-white);
   border: 1px solid #e5e7eb;
@@ -330,7 +317,7 @@
      height: 280px;
   padding: 0.8rem;
   margin-top: 0.5rem;
-}
+} */
 
 .showTabe_st {
   transition: all 400ms ease-in-out; 
@@ -389,5 +376,24 @@
   font-weight: 300;
 border-radius: 8px;
 }
+
+/* statcards */
+.card {
+  background-color: red;
+  display: flex; 
+  align-items: center;
+  padding:0.5rem 1rem;
+  /* width: 25rem; */
+  border-radius: 0.75rem;
+  box-shadow: 0 4px 6px rgba(19, 19, 19, 0.1);
+  transition: transform 0.2s;
+  position: relative;
+}
+
+.card:hover {
+  transform: translateY(-2px);
+}
+
+
 
 
