--- a/src/Pages/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard.module.css
@@ -5,7 +5,8 @@
   width: 100%;
   column-gap: 2.4rem;
   row-gap: 2.4rem;
-  /* margin: 0px ; */
+  margin: 0px auto;
+  /* justify-content: center; */
   /* background-color: pink; */
 }
 
@@ -239,6 +240,7 @@
   padding: 0.8rem;
   width: 20rem;
   position: relative;
+  cursor: pointer;
 }
 .addorder:hover {
   background-color: #054231;
