--- a/src/Pages/Auth/Register.css
+++ b/src/Pages/Auth/Register.css
@@ -6,11 +6,12 @@
 .Register-main-container {
   width: 100vw;
   height: 100vh;
-  background: radial-gradient(
+  /* background: radial-gradient(
     circle at 85% 50%,
     var(--light-green-gradient),
     var(--dark-green)
-  );
+  ); */
+  background: var(--main-theme);
   display: flex;
   align-items: center;
   justify-items: center;
@@ -60,8 +61,18 @@
   margin-top: 15%;
 }
 .registering-part-logo {
-  width: 30rem;
+  width: 35rem;
+  height: 6.5rem;
+  background-color:black;
+  object-fit: contain;
   margin: 2rem auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.registering-part-logo img{
+  width: 11rem;
+  height: 4rem;
 }
 
 /* THE WHITE PART  */
