--- a/src/Components/Phone/PhoneNumberInput.module.css
+++ b/src/Components/Phone/PhoneNumberInput.module.css
@@ -4,8 +4,8 @@
   width: 100%;
   height: 4rem;
   color: var(--clr-black);
-  border: 1px solid var(--main-theme);
-  background-color: var(--input-background);
+  border-left: 1px solid var(--main-theme);
+  background-color: white;
   border-radius: 1.1rem;
   font-size: 1rem;
   display: flex;
@@ -27,7 +27,8 @@
   padding-left: 1em;
   font-size: 1.3em;
   max-height: 3.6rem;
-  margin-bottom: 2.8px;
+  margin-bottom:5px;
+  outline: none;
 }
 .phone-input-wrapper input:focus {
   outline: none;
