--- a/src/Components/Phone/PhoneNumberInput.module.css
+++ b/src/Components/Phone/PhoneNumberInput.module.css
@@ -1,57 +1,52 @@
-/* Remove default library styles and add your own */
-.phone-input-wrapper{
-  padding: 0.75rem 1rem;
+.phone-input-wrapper {
+  width: 100%;
+  height: auto;
+  position: relative;
+  padding: 0.5rem;
+}
+.flex-container{
+  /* padding: 0.75rem 1.4rem; */
   width: 100%;
   height: 4rem;
+  padding-left: 1rem;
   color: var(--clr-black);
-  border-left: 1px solid var(--main-theme);
-  background-color: white;
-  border-radius: 1.1rem;
+  border: 1px solid var(--main-theme);
+  background-color: var(--input-background);
+  border-radius: 9px;
   font-size: 1rem;
   display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
-/* .custom-phone-input {
-  display: flex;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  padding: 6px;
-  background: #fff;
-} */
+.flex-container input{
+  /* display: none; */
+  height: 100%;
+  background-color: transparent;
+  color: var(--background-clr);
+  font-size: 1.2rem;
+}
+
 .phone-input-wrapper input{
   border: none;
-  width: 100%;
+  width: 85%;
   min-width: 25rem;
   padding: 0;
   padding-left: 1em;
   font-size: 1.3em;
   max-height: 3.6rem;
   margin-bottom:5px;
-  outline: none;
+  border: 0px solid var(--main-theme) !important;
+  background-color: transparent !important;
 }
 .phone-input-wrapper input:focus {
   outline: none;
-  /* border-color: var(--main-theme); */
+  border-color: var(--main-theme);
 }
-.phone-input-wrapper:focus-within {
-  border-color: black;
-}
-
-/* .custom-phone-input input {
-  border: none;
-  outline: none;
-  flex: 1;
-  padding: 8px;
-  font-size: 14px;
-} */
-
-.custom-phone-input.error {
-  border-color: red;
-}
-
-.phone-input-error {
+.errorMessage{
+  border-left: 3px solid red;
+  border-radius: 2px;
+  padding-left: 10px;
+  margin: 0px;
   color: red;
-  font-size: 12px;
-  margin-top: 4px;
 }
