--- a/src/Components/Stepper.module.css
+++ b/src/Components/Stepper.module.css
@@ -377,22 +377,25 @@ input[type="tel"] {
 /* Error handler */
 .error {
   color: #d32f2f; /* Deep red */
-  font-size: 1rem;
-  margin-top: 4px;
+  /* font-size: 1rem;
+  margin-top: 4px; */
   /* padding: 6px 12px; */
   padding-left: 6px;
-  background-color: #fdecea; /* Light red background */
-  border-left: 4px solid #f44336;
+  /* Light red background */
+  /* border-left: 4px solid #f44336;
   border-radius: 4px;
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 8px; */
   animation: shake 0.5s ease-in-out;
 }
-
-.error::before {
-  content: "⚠";
-  font-size: 1.3rem;
+.error{
+  border-left: 3px solid red;
+  border-radius: 2px;
+  padding-left: 10px;
+  margin: 0px;
+  color: red;
+   background-color: #fdecea;
 }
 
 @keyframes shake {
