--- a/src/Components/ThirdPartyStepper.module.css
+++ b/src/Components/ThirdPartyStepper.module.css
@@ -1,10 +1,8 @@
-
 .form-container {
   width: 90%;
   max-width: 60rem;
   margin: 2rem auto;
 }
-
 .form-title {
   text-align: center;
   margin-bottom: 2rem;
@@ -84,17 +82,31 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   gap: 1.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
   justify-content: center;
   align-items: center;
 }
-
 .form-group {
   margin-top: -2rem;
   display: flex;
   flex-direction: column;
+  /* margin-bottom: 3px; */
 }
-
+.form-group label {
+  font-size: 1.3rem;
+  font-weight: 400;
+  margin-top: 0.9rem;
+}
+.form-group input {
+  padding: 0.75rem 1rem;
+  width: 100%;
+  height: 4rem;
+  color: var(--clr-black);
+  border: 1px solid var(--main-theme);
+  background-color: var(--input-background);
+  border-radius: 1.1rem;
+  font-size: 1rem;
+}
 .form__grid {
   display: grid;
   grid-template-rows: repeat(minmax(20rem, 1fr));
@@ -113,22 +125,7 @@
   justify-content: center;
   align-items: center;
 }
-.form-group label {
-  font-size: 1.3rem;
-  font-weight: 400;
-  margin-top: 0.9rem;
-}
 
-.form-group input {
-  padding: 0.75rem 1rem;
-  width: 100%;
-  height: 4rem;
-  color: var(--clr-black);
-  border: 1px solid var(--main-theme);
-  background-color: var(--input-background);
-  border-radius: 1.1rem;
-  font-size: 1rem;
-}
 .form-group input::placeholder {
   color: var(--main-theme);
   font-family: "Poppins", sans-serif;
@@ -255,6 +252,7 @@ input[type="date"] {
 input[type="date"]::-webkit-calendar-picker-indicator {
   background-color: var(--main-theme);
   height: 2.67em;
+  /* height: 2.5rem; */
   width: 3.5em;
   position: relative;
   right: -1em;
@@ -462,23 +460,31 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 /* Error handler */
 .errorMessage {
   color: #d32f2f; /* Deep red */
-  font-size: 1rem;
-  margin-top: 4px;
+  /* font-size: 1rem;
+  margin-top: 4px; */
   /* padding: 6px 12px; */
   padding-left: 6px;
-  background-color: #fdecea; /* Light red background */
-  border-left: 4px solid #f44336;
+  /* Light red background */
+  /* border-left: 4px solid #f44336;
   border-radius: 4px;
   display: flex;
   align-items: center;
   gap: 8px;
-  animation: shake 0.5s ease-in-out;
+  animation: shake 0.5s ease-in-out; */
+}
+.errorMessage{
+  border-left: 3px solid red;
+  border-radius: 2px;
+  padding-left: 10px;
+  margin: 0px;
+  color: red;
+   background-color: #fdecea;
 }
 
-.errorMessage::before {
+/* .errorMessage::before {
   content: "⚠";
   font-size: 1.3rem;
-}
+} */
 
 @keyframes shake {
   0%, 100% { transform: translateX(0); }
