--- a/src/Components/datePicker/CustomDatePicker.css
+++ b/src/Components/datePicker/CustomDatePicker.css
@@ -1,7 +1,6 @@
 
-
 .p-calendar {
-  width: 490px;
+  min-width: 29.4rem;
   /* height: 3.8rem;
   max-width: 50rem; */
 }
@@ -12,7 +11,6 @@
   border: 1px solid #ccc;
   padding: 0.5rem;
   margin-top: 3px;
-  
 }
 
 /* Header (Month & Year selectors) */
@@ -106,6 +104,7 @@
   border-radius: 0 8px 8px 0;
   padding: 1.5rem;
   width: 5rem;
+  height: 4rem;
   transition: background-color 250ms ease-in-out;
 }
 
