--- a/src/Pages/Auth/Register.css
+++ b/src/Pages/Auth/Register.css
@@ -26,7 +26,7 @@
   height: 100vh;
   background-color: var(--clr-white);
   box-shadow: -10px 0px 100px  var(--logo-color);
-
+  position: relative;
 }
 .register-text-left {
   width: 100%;
@@ -88,7 +88,7 @@
 }
 
 /* CLOSE BUTTON */
-.close {
+/* .close {
   position: absolute;
   right: 11rem;
   top: 15rem;
@@ -111,4 +111,28 @@
 .close:hover {
   background-color: gray;
   color: var(--clr-white);
+} */
+
+/* cancel text */
+.cancel-box {
+  position: absolute;
+  bottom: 2rem;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  font-size: .8rem;
+  color: var(--clr-black);
+}
+.cancel-box h1{
+  font-weight: 300;
+  color: rgb(59, 59, 59);
+}
+.cancel-box h1 span{
+  font-weight: 650;
+  color: black;
+  cursor: pointer;
+}
+.cancel-box h1 span:hover{
+  text-decoration: underline;
+  
 }
