--- a/src/AddOrder/AssignOrderFilterTB/AssignRiderFilter.module.css
+++ b/src/AddOrder/AssignOrderFilterTB/AssignRiderFilter.module.css
@@ -1,3 +1,11 @@
+.fullPage {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    top: 0;
+    left: 0;
+}
 
 .tableContainer{
     position: absolute;
