--- a/src/AddOrder/changeOrder/changeOrder.module.css
+++ b/src/AddOrder/changeOrder/changeOrder.module.css
@@ -1,20 +1,29 @@
 
 
+.fullPage {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    top: 0;
+    left: 0;
+}
 
-.modalContainer{
+.modalContainer {
     position: absolute;
     display: flex;
     flex-direction: column;
-    background-color: white;
+    background-color: white; 
     width: 500px;
     padding: 24px;
-    filter: drop-shadow(1px 1px 1.4px black);
+    filter: drop-shadow(1px 1px 1.4px rgb(80, 78, 78));
+    box-shadow: 1px 1px 12px rgb(80, 78, 78);
     border-radius: 8px;
-    gap:12px;
-    
-    left:50%;
-    top:50%;
-    transform: translate(-50%,-50%);
+    gap: 12px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
 }
 
 
