--- a/src/Pages/DailyDelivery/DailyDelivery.module.css
+++ b/src/Pages/DailyDelivery/DailyDelivery.module.css
@@ -1,67 +1,79 @@
 .tableContainerOuter {
-    background-color:var(--clr-white); 
-    padding-left:2rem ;
-    padding-right: 2rem;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    width: 100%;
-    border-radius: 8px;
-    position: relative;
+  background-color: var(--clr-white);
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 10rem;
+  width: 100%;
+  border-radius: 8px;
 }
-.tableContainer{
+.tableContainer {
   overflow-x: auto;
-   border-top-left-radius: 0 !important;
-   background-clip: padding-box;
+  border-top-left-radius: 0 !important;
+  background-clip: padding-box;
+  width: 100%;
 }
-
+.tableconMain {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: auto;
+}
 .table {
+  border-top-left-radius: 0 !important;
   border-collapse: separate;
-   border-top-left-radius: 0 !important;
+  /* border-collapse: collapse; */
   border-spacing: 0;
   border-radius: 8px;
-  overflow: hidden;
+  /* overflow: hidden; */
+
+  border: 1px solid #ddd;
+  background: #fbf8f8;
+  box-shadow: 1rem var(--darker-gray);
+
+  table-layout: auto;
   width: 100%;
-   border: 1px solid #ddd;
-   background: #fbf8f8;
-    box-shadow: 1rem var(--darker-gray);
+  overflow-x: auto;
 }
 
 .tableheader {
- background-color:var(--main-theme);
-    color: var(--clr-white);
+  background-color: var(--main-theme);
+  color: var(--clr-white);
+  height: 47px;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  font-weight: 400;
+}
+
+.headerRow {
+  cursor: pointer;
+  transition: background-color 0.2s;
 }
 
 .thSmall {
-  width: 40px;
-  padding: 8px;
-  text-align: left;
-      font-size: 12px;
-     font-weight: 500;
- 
+  font-size: 1.2rem;
+  font-weight: 500;
 }
 
 .th {
-   padding: 1.2rem;
-    text-align: left;
-    gap: 1rem;
-    border-bottom: none;
-    border-top: none;
-     letter-spacing: 1px;
-     font-size: 12px;
-     font-weight: 500;
+  white-space: nowrap;
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding: 1.2rem;
+  text-align: left;
+  gap: 2rem;
+  /* border-bottom: none; */
+  /* border-top: none; */
 }
 
-
-
- .td {
-   padding: 1.2rem;
-    text-align: left;
-    gap: 1rem;
-    border-bottom: 0.1rem solid #ddd;
-    border-top: 0.1rem solid #ddd;
-    
+.td {
+  white-space: nowrap;
+  font-size: 1.4rem;
+  padding: 1.2rem;
+  text-align: left;
+  /* gap: 1rem; */
+  border-bottom: 0.1rem solid #ddd;
+  /* border-top: 0.1rem solid #ddd; */
 }
-
 .status {
   padding: 4px 8px;
   border-radius: 4px;
@@ -73,32 +85,32 @@
 }
 
 .completed {
-  background-color: #C3F9D5;
+  background-color: #c3f9d5;
   color: #065f46;
 }
 
 .rejected {
-  background-color: #FFC9C9;
+  background-color: #ffc9c9;
   color: #991b1b;
 }
 
 .inProgress {
-  background-color: #88AEF1;
+  background-color: #88aef1;
   color: #1e3a8a;
 }
 
 .failed {
-  background-color: #FF9ABA;
+  background-color: #ff9aba;
   color: #9d174d;
 }
 
 .assigned {
-  background-color: #FFEC8B;
+  background-color: #ffec8b;
   color: #78350f;
 }
-.returned{
-  background-color: #AFAFAF;
-  color:#414040;
+.returned {
+  background-color: #afafaf;
+  color: #414040;
 }
 .filters {
   display: flex;
@@ -114,43 +126,41 @@
   transition: all 0.2s ease;
 }
 .filters button:first-child {
-  border-top-left-radius: 8px; 
-   width: 8rem;
+  border-top-left-radius: 8px;
+  width: 8rem;
 }
 
 .filters button:last-child {
   border-top-right-radius: 8px;
-  
 }
 
 .filterButton:hover {
-   background-color: var(--input-background);
-    border-color: #17654f;
-   border-bottom: none;
+  background-color: var(--input-background);
+  border-color: #17654f;
+  border-bottom: none;
 }
 
 .activeFilter {
   background-color: #17654f;
   color: white;
   border-color: #17654f;
-   border-bottom: 4px solid rgb(56, 54, 54);
+  border-bottom: 4px solid rgb(56, 54, 54);
 }
 
-
-.overview{
-    color: var(--clr-black);
-    font-size: 2em;
-    margin-left: 1rem;
-    font-weight: bold;
+.overview {
+  color: var(--clr-black);
+  font-size: 2em;
+  margin-left: 1rem;
+  font-weight: bold;
 }
 
-.overviewtext{
-    font-size: 14px;
-    margin-left: 0.9rem;
-    margin-bottom: 1rem;
+.overviewtext {
+  font-size: 14px;
+  margin-left: 0.9rem;
+  margin-bottom: 1rem;
 }
-.date__control{
-   /* align-items: center;
+.date__control {
+  /* align-items: center;
   justify-content: center;
    padding: 0.8rem;
   border-radius: 0.8rem;
@@ -158,19 +168,19 @@
   background-color: white; */
 
   background-color: white;
-  border:1px solid #00000033;
+  border: 1px solid #00000033;
   width: 15rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap:0.5rem;
+  gap: 0.5rem;
   border-radius: 8px;
   transition: background-color 250ms ease-in-out;
   cursor: pointer;
   padding: 1rem;
 }
 
-.date__control:hover{
+.date__control:hover {
   background-color: var(--input-background);
   border-color: white;
 }
@@ -179,7 +189,6 @@
   position: relative;
   display: inline-block;
 }
-
 
 .dropdownMenu {
   position: absolute;
@@ -205,11 +214,10 @@
   gap: 1.3rem;
 }
 
-.dropdownItem:hover{
+.dropdownItem:hover {
   background-color: var(--input-background);
   border-color: white;
 }
-
 
 .columnToggleContainer {
   position: relative;
@@ -228,22 +236,21 @@
    width: 15rem;
   padding: 0.8rem;
   transition: all 250ms ease-in-out; */
-   background-color: white;
-  border:1px solid #00000033;
+  background-color: white;
+  border: 1px solid #00000033;
   width: 15rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap:0.5rem;
+  gap: 0.5rem;
   border-radius: 8px;
   transition: background-color 250ms ease-in-out;
   cursor: pointer;
   padding: 1rem;
 }
-.columnButton:hover{
+.columnButton:hover {
   background-color: var(--input-background);
   border-color: white;
-
 }
 
 .columnDropdown {
@@ -267,12 +274,13 @@
   align-items: center;
   gap: 6px;
   font-size: 14px;
+  cursor: pointer;
 }
-.checkboxItem input[type='checkbox'] {
+.checkboxItem input[type="checkbox"] {
   appearance: none;
   width: 16px;
   height: 16px;
-  border: 2px solid #9ca3af; 
+  border: 2px solid #9ca3af;
   border-radius: 3px;
   display: inline-block;
   position: relative;
@@ -280,13 +288,13 @@
   background-color: white;
 }
 
-.checkboxItem input[type='checkbox']:checked {
-  background-color: #065f46; 
+.checkboxItem input[type="checkbox"]:checked {
+  background-color: #065f46;
   border-color: #065f46;
 }
 
-.checkboxItem input[type='checkbox']:checked::after {
-  content: '';
+.checkboxItem input[type="checkbox"]:checked::after {
+  content: "";
   position: absolute;
   top: 2px;
   left: 4px;
@@ -311,8 +319,6 @@
   cursor: pointer;
   background-color: white;
 }
-
-
 
 .tableRow:hover {
   background-color: var(--input-background);
@@ -354,7 +360,7 @@ input[type="checkbox"]:checked::after {
 .tableRow td:first-child input {
   /* Re-enable pointer events for just the checkbox */
   pointer-events: all;
-    width: 16.76px;
+  width: 16.76px;
   height: 16px;
 }
 /* Add to Dashboard.module.css */
@@ -363,13 +369,21 @@ input[type="checkbox"]:checked::after {
   transition: background-color 0.2s;
 }
 
+.noResults {
+  padding: 2rem;
+  text-align: center;
+  color: #666;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  /* background-color: red; */
+}
 
 /* Make sure header checkbox matches your green style */
 .th input[type="checkbox"] {
   -webkit-appearance: none;
-   appearance: none;
-  width: 16.76px;
-  height: 16px;
+  appearance: none;
+  width: 18px;
+  height: 18px;
   border: 1px solid #ccc;
   border-radius: 3px;
   outline: none;
@@ -391,96 +405,99 @@ input[type="checkbox"]:checked::after {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
 /* ------------------- */
 
-
-
-.header_continer_st{
+.header_continer_st {
   display: flex;
   flex-direction: column;
-  gap:2rem;
+  gap: 2rem;
   border-bottom: 1px solid #00000033;
   padding-bottom: 1.5rem;
   margin-bottom: 1.5rem;
-
 }
 
-.header_con_content1{
+.header_con_content1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
 
-.overview_container{
-
+.overview_container {
   width: 30%;
 }
 
-.search_filter_con{
+.search_filter_con {
   display: flex;
   justify-content: space-between;
-  gap:8px;
-  
+  gap: 8px;
+
   width: 60%;
 }
 
-.header_con_content2{
+.header_con_content2 {
   display: flex;
   justify-content: space-between;
 }
 
-.sortBtn{
+.sortBtn {
   background-color: white;
-  border:1px solid #00000033;
+  border: 1px solid #00000033;
   width: 15rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap:0.5rem;
+  gap: 0.5rem;
   border-radius: 8px;
   transition: background-color 250ms ease-in-out;
   cursor: pointer;
+  position: relative;
 }
-.bulkbtn{
+.filter_modal_overlay {
+  position: relative;
+}
+
+/* .filter_modal_content {
+  position: absolute;
+  top: 500px;
+} */
+.bulkbtn {
   background-color: white;
-  border:1px solid #00000033;
+  border: 1px solid #00000033;
   width: 15rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap:0.5rem;
+  gap: 0.5rem;
   border-radius: 8px;
   transition: background-color 250ms ease-in-out;
   cursor: pointer;
   padding: 1rem;
+  cursor: pointer;
 }
 
-.sortBtn:hover{
+.sortBtn:hover {
   background-color: var(--input-background);
   border-color: white;
 }
 
-.pop_up_table_filter{
+.pop_up_table_filter {
   width: 50rem;
   position: absolute;
-  top:-15px;
+  top: 220px;
   z-index: 50;
-  left:25rem;
+  left: 450px;
   /* box-shadow: 0px 0px 5px gray; */
   opacity: 1;
   transition: all 300ms ease-in-out;
 }
 
-.hide_table_filter{
+.hide_table_filter {
   visibility: hidden;
   transition: all 300ms ease-in-out;
   opacity: 0;
 }
 
-
-.MdCard{
+.MdCard {
   width: 50rem;
   min-height: 25rem;
   border-radius: 2rem;
@@ -489,9 +506,12 @@ input[type="checkbox"]:checked::after {
   background-color: white;
   border: 0.1rem solid #ccc;
   filter: drop-shadow(1px 1px 1.4px black);
+  /* position: absolute;
+  top: 230px;
+  left: 50px; */
 }
 
-.mdCardContent{
+.mdCardContent {
   margin-top: 2rem;
   display: flex;
   justify-content: space-between;
@@ -499,12 +519,12 @@ input[type="checkbox"]:checked::after {
 }
 
 .bulk_update_dropdown {
-   position: absolute;
+  position: absolute;
   top: 100%; /* Position below the button */
   left: 0;
   background-color: white;
   border: 1px solid #ddd;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   min-width: 200px;
   margin-top: 1rem;
